<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.DevNotesFragment"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- the fillviewport attribute is clutch for scroll view. allows buttons to then be stuck to the bottom -->

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin">

        <TextView
            android:id="@+id/full_dev_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:lineSpacingExtra="8sp"
            android:text="@string/full_dev_notes"
            android:textSize="16sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/email_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/email_me"
            android:src="@drawable/ic_baseline_email_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/venmo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/pay_venmo"
            android:scaleType="fitCenter"
            android:src="@drawable/venmo"
            app:layout_constraintBottom_toTopOf="@+id/paypal"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/paypal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/pay_paypal"
            android:scaleType="fitCenter"
            android:src="@drawable/paypal"
            app:layout_constraintBottom_toTopOf="@+id/email_button"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>